--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -151,6 +151,7 @@
             flex-direction: column;
             .desc {
               width: 80vw;
+              height: auto;
             }
             .img {
               width: 80vw;
