--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -27,23 +27,36 @@
       flex-direction: column;
       background-color: $page-color;
       align-items: center;
-      width: 12rem;
+      width: 15rem;
       height: 100vh;
       .firstLi {
         border: none;
+        padding-left: 1rem;
+        &:hover {
+          path {
+            stroke: $focus-color;
+          }
+        }
       }
       a {
         text-decoration: none;
       }
       li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
         list-style: none;
         color: $text-color;
-        margin: 3.5rem 0;
+        margin: 2rem 0;
         font-size: 1.4rem;
         border-bottom: 1px solid $focus-color;
+        padding-right: 1rem;
         &:hover {
-          color: $svg-color;
+          color: $focus-color;
+          path {
+            fill: $focus-color;
+          }
         }
       }
     }
@@ -110,6 +123,11 @@
       height: 100vh;
       .firstLi {
         border: none;
+        &:hover {
+          path {
+            stroke: $focus-color;
+          }
+        }
       }
       a {
         text-decoration: none;
